--- a/fin_app/templates/view.html
+++ b/fin_app/templates/view.html
@@ -104,8 +104,8 @@
         </table>
         <br>
         <a href="{% url 'home' %}">Back</a>
-        {% comment %} <a href="{% url 'plot_graph' %}">
+        <a href="{% url 'plot_graph' %}">
             <button class="btn">Plot Graph</button>
-        </a> {% endcomment %}
+        </a>
     </center>
 {% endblock %}
