--- a/analyzer_app/templates/view_stock_graph.html
+++ b/analyzer_app/templates/view_stock_graph.html
@@ -1,21 +1,11 @@
-Copy
-{% extends 'base.html' %}
 
-{% block content %}
-    <h1>Stock Price per Share vs Close Price</h1>
-    <div id="graph-container">
-        <img src="{% static 'analyzer_app/images/graph.png' %}" alt="Graph">
-    </div>
-{% endblock %}
-
-{% comment %} <html>
+<html>
 <head>
-
+    <title>Stock Graph</title>
 </head>
 <body>
-    <center>
-        <h1> This is view grapgh page </h1>
-        <img src="data:image/png;base64,{{ image_base64 }}" alt="Stock Graph">
-    </center>
+    <div>
+        <img src="data:image/png;base64,{{ plot_image }}" alt="Stock Graph">
+    </div>
 </body>
-</html> {% endcomment %}
+</html>
