--- a/fin_app/templates/view_crypto.html
+++ b/fin_app/templates/view_crypto.html
@@ -106,5 +106,7 @@
         </table>
         <br>
         <a href="{% url 'home' %}">Back</a>
+        <a href="{% url 'crypto_graph' %}"> <button class="btn">Generate Crypto Graph</button></a>
+    
     </center>
 {% endblock %}
