--- a/fin_app/templates/create_crypto.html
+++ b/fin_app/templates/create_crypto.html
@@ -24,7 +24,7 @@
 	</form>
 	{{ msg }}
 	<br>
-	<a href = "{% url 'home' %}"> Back </a>
+	<a href = "{% url 'home' %}"> <button class="btn">Back</button> </a>
 
 </center>
 {% endblock %}
