--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,11 @@
 			box-sizing: border-box;
 		}
 		body {
+			background-image: url('https://media.istockphoto.com/id/1311598658/photo/businessman-trading-online-stock-market-on-teblet-screen-digital-investment-concept.jpg?s=612x612&w=0&k=20&c=HYlIJ1VFfmHPwGkM3DtVIFNLS5ejfMMzEQ81ko534ak='); /* Add your background image URL here */
 			background-color: #f8f9fa;
 			color: #333;
+            background-size: cover;
+            background-repeat: no-repeat;
 		}
 		.navbar {
 			background-color: #343a40;
