--- a/fin_app/templates/create_crypto.html
+++ b/fin_app/templates/create_crypto.html
@@ -1,30 +1,125 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Create Crypto Investment</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            font-family: "Arial", sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            background-color: #fff; /* Set background color to white */
+            color: #333;
+        }
+        .navbar {
+            background-color: #343a40;
+            padding: 15px 0;
+            border-bottom: 1px solid #495057;
+        }
+        .navbar-brand {
+            color: #fff;
+            font-size: 24px;
+            font-weight: bold;
+            margin-right: 20px;
+            font-family: 'Arial Black', sans-serif;
+        }
+        .navbar-nav .nav-link {
+            color: #fff;
+            font-size: 18px;
+            font-weight: bold;
+            margin-left: 15px;
+        }
+        .navbar-nav .nav-link:hover {
+            color: #ffc107;
+        }
+        .btn {
+            background-color: #ffc107;
+            color: #343a40;
+            border: none;
+            border-radius: 30px;
+            padding: 10px 20px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: #ff6b6b;
+            color: #fff;
+        }
+        .form-control {
+            border: 2px solid #ffc107;
+            border-radius: 30px;
+            padding: 15px 20px;
+            font-size: 16px;
+            margin-top: 20px;
+        }
+        .form-control:focus {
+            border-color: #ff6b6b;
+            box-shadow: none;
+        }
+        
+        .container {
+            margin-top: 50px;
+        }
+        
+    </style>
+</head> 
+<body>
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">
+        Portfolio Pulse
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'ulogout' %}">Logout</a>
+              </li>
+          {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'usignup' %}">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'ulogin' %}">Login</a>
+              </li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
+    
+    <div class="container">
+        <center>
+            <br>
+            <br>
+            <h1 class="heading">Create Crypto Investment</h1>
+            <form method="POST">
+                {% csrf_token %}
+                <table border="2">
+                    {{ fm.as_table }}
+                </table>
+                <br>
+                <input type="submit" value="Create Crypto Investment" class="btn">
+                
+            </form>
+            {{ msg }}
+            <br>
+            <a href="{% url 'home' %}"><button class="btn">Back</button></a>
 
-	{% block head %}<meta name="viewport" content="width=device-width, initial-scale=1">{% endblock %}
-{% block title %}Create Crypto Investment{% endblock %}
-{% block style %}
-	*{ background-color: #fcfcfc;}
-	.btn{background-color: #afd7de; }
-	.heading{font-size: 40px; }	
-{% endblock %}
+        </center>
+    </div>
 
-{% block content %}
-<center>
-	<br>
-	<br>
-	<h1 class = "heading">Create Crypto Investment </h1>
-	<form method = "POST">
-	{% csrf_token %}
-		<table border = "2">
-			{{ fm.as_table }}
-		</table>
-		<br>
-		<input type = "Submit" value = "Create Crytpo Investment" class = "btn">
-		
-	</form>
-	{{ msg }}
-	<br>
-	<a href = "{% url 'home' %}"> <button class="btn">Back</button> </a>
-
-</center>
-{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</body>
+</html>
