small ui change

--- a/fin_app/templates/view_crypto.html
+++ b/fin_app/templates/view_crypto.html
@@ -170,7 +170,7 @@
                             {% endwith %}
                         </td>
                         <td>
-                            a href="{% url 'delete_crypto' id=todo.crypto_id %}" onclick="return confirm('Are you sure?')">
+                            <a href="{% url 'delete_crypto' id=todo.crypto_id %}" onclick="return confirm('Are you sure?')">
                             <button class="btn">Delete</button>
                         </a>
                     </td>
