--- a/fin_app/templates/usignup.html
+++ b/fin_app/templates/usignup.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-		* {
+        * {
             font-family: "Arial", sans-serif;
             margin: 0;
             padding: 0;
@@ -75,6 +75,7 @@
             border-radius: 10px; /* Adjusted border radius for the card */
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adjusted shadow for depth */
             padding: 10px; /* Adjusted padding inside the card */
+            opacity: 0.8; /* Added opacity to the card */
         }
 		.heading {
 			font-size: 40px;
